* Set JDK target to 1.16. * Updated few of the dependencies versions to support the latest JDK.